<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/repo_name" />

    <TextView
        android:id="@+id/forks_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/forks_description"
        android:text="@string/forks"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repo_description" />

    <TextView
        android:id="@+id/forks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@id/forks_img"
        app:layout_constraintTop_toBottomOf="@id/repo_description" />

    <TextView
        android:id="@+id/watchers_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/watchers_description"
        android:text="@string/watchers"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toRightOf="@id/forks_count"
        app:layout_constraintTop_toBottomOf="@+id/repo_description" />

    <TextView
        android:id="@+id/watchers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toRightOf="@id/watchers_img"
        app:layout_constraintTop_toBottomOf="@id/repo_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>